--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,8 @@ fastapi
 uvicorn
 openai>=1.0.0
 langchain
+langchain-community
+langchain-openai
 faiss-cpu
 unstructured
 tiktoken
-langchain-community
